# hcg-document-system

./: .gitignore  README.md
docs/: ADD.md  API_Spec.md  DDL.md  Spec UI-UX.md
src/: next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
src-tauri/: Cargo.toml  check_output.txt  check_output_2.txt  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: auth.rs  documents.rs  mod.rs  search.rs  tramites.rs
src-tauri/src/core/: audit.rs  backup.rs  mod.rs
src-tauri/src/hardware/: mod.rs
src-tauri/src/workers/: ai_worker.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CommandBar.tsx  ConnectivityGuard.tsx  InsightCards.tsx  ProgressValidation.tsx  SidebarItem.tsx
src/components/features/: DocumentViewer.tsx  InsightCards.tsx  ProgressValidation.tsx  ScannerAction.tsx
src/components/feedback/: ConnectivityGuard.tsx
src/components/layout/: CommandBar.tsx  Sidebar.tsx  SidebarItem.tsx
src/components/ui/: Tooltip.tsx
src/hooks/: useIngesta.ts  useMediaQuery.ts  useTramites.ts
src/lib/: animations.ts  api.ts  storage.ts  utils.ts
src/store/: useUIStore.ts
