[package]
name = "hcg-document-system-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "tls-native-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.0"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tauri = { version = "2.0.0-rc" }
tracing = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
tempfile = "3.8"
image = "0.24"
v4l = "0.14"

[build-dependencies]
tauri-build = "2.0.0-rc"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
