[package]
name = "hcg-document-system-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1.7", features = ["v4"] }
flate2 = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
dirs = "5.0"
jsonwebtoken = "9.0"
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
tauri = { version = "2.0" }

[build-dependencies]
tauri-build = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
